@@ -4130,3 +4130,11 @@ M       vbm_vol_simgrow.mexw64
 (4) Recompiled mexfiles.
 ------------------------------------------------------------------------
 r569 | gaser | 2014-02-07 10:45:44
+
+M       CHANGES.txt
+M       cg_vbm_batch.m
+ M      templates_1.50mm/vbm12.nii
+
+Corrected wrong handling of WMH in cg_vbm_batch.m.
+------------------------------------------------------------------------
+r570 | gaser | 2014-02-07 11:01:42
